docker-webhook-relay/deployment.yaml
apiVersion: apps/v1beta1 # for versions before 1.6.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: docker-webhook-relay
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: docker-webhook-relay
    spec:
      serviceAccountName: docker-webhook-relay-role
      containers:
      - name: docker-webhook-relay
        image: pinetes/docker-webhook-relay:latest
        imagePullPolicy: Always
        ports:
          - name: web
            containerPort: 3000
            protocol: TCP
