docker-webhook-relay/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-webhook-relay
  labels:
    app: docker-webhook-relay
spec:
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 3000
  selector:
    app: docker-webhook-relay
